--- a/index.html
+++ b/index.html
@@ -488,8 +488,9 @@
 </div>
 
 <audio id="bgAudio" loop preload="auto" crossorigin="anonymous">
-  <source src="https://drive.google.com/file/d/1PAWpGX-G0dTjjZ4IUm2Fyj31lJtSCQQS/view?usp=drivesdk" type="audio/mpeg" />
+  <source src="https://docs.google.com/uc?export=open&id=1PAWpGX-G0dTjjZ4IUm2Fyj31lJtSCQQS" type="audio/mpeg" />
 </audio>
+
 
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
