--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 </div>
 
 <audio id="bgAudio" loop preload="auto" crossorigin="anonymous">
-  <source src="https://docs.google.com/uc?export=open&id=1PAWpGX-G0dTjjZ4IUm2Fyj31lJtSCQQS" type="audio/mpeg" />
+  <source src="./WhatsApp Audio 2025-10-07 at 12.05.20 PM.mpeg" type="audio/mpeg" />
 </audio>
 
 
