--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 
         <div class="message">
           <!-- jQuery animated heart with name inside; set data-name to personalize -->
-          <div class="heart-wrap" id="jqHeartWrap" aria-hidden="false" data-name="Aaradhya">
+          <div class="heart-wrap" id="jqHeartWrap" aria-hidden="false" data-name="">
             <svg id="jqHeart" width="140" height="130" viewBox="0 0 120 110" role="img" aria-label="Love heart">
               <defs>
                 <linearGradient id="heartGrad" x1="0" y1="0" x2="1" y2="1">
